fcardsaver (1.2.6) UNRELEASED; urgency=low

  * Redesign generation of kana dictionaries to use more versatile XML.
  * Fix overlong line in fcardsaver-config(7) man page.

 -- Alec Kojaev <alec@kojaev.name>  Wed, 17 Jul 2013 22:52:50 +0400

fcardsaver (1.2.5) precise; urgency=low

  * Win32 build documentation corrections, removed trailing spaces from several files.
  * New control for 'data-root' configuration parameter; fixes #3.
  * Updated Hanazono font URL for Win32 build to version 2013-02-22.
  * Fixes and additions in BUILD.win32 file.
  * Ignore QtCreator-created configuration and extra Win32 build scripts.
  * Win32 example build script now accepts additional make parameters.
  * Ignore subdirectory web/ (used for gh-pages).
  * Fix Win32 headers for SHGetFolderPath() (MinGW 4.7 removed it from <shlwapi.h>).
  * Removed deprecated qVariantValue() and qVariantCanConvert() calls.
  * Change NSIS script to use "libraries.list" for list of files to install/delete (closes issue #6).
  * Implemented new flashcard file instruction "protect" (closes issue #4).
  * Documentation on configuration parameters is split into a separate manpage.
  * Initial set of changes in preparation to Qt5.

 -- Alec Kojaev <alec@kojaev.name>  Sun, 14 Jul 2013 21:18:57 +0400

fcardsaver (1.2.4) precise; urgency=low

  * Kanji flash cards now include nanori readings.

 -- Alec Kojaev <alec@kojaev.name>  Mon, 01 Apr 2013 10:40:24 +0400

fcardsaver (1.2.3a) precise; urgency=low

  * Various Win32 build fixes and improvements.
  * Win32 build can now use GCC versions >= 4.6.

 -- Alec Kojaev <alec@kojaev.name>  Fri, 28 Dec 2012 02:16:38 +0400

fcardsaver (1.2.3) precise; urgency=low

  * QMake trick to update DLLs, fixes issue #1.
  * Win32 screensaver stub, fixes issue #2.

 -- Alec Kojaev <alec@kojaev.name>  Mon, 24 Dec 2012 23:16:17 +0400

fcardsaver (1.2.2) precise; urgency=low

  * Drop dependency on docbook2x; use plain xsltproc and